--- a/style.css
+++ b/style.css
@@ -290,6 +290,14 @@ header {
 
 }
 
+.El-Re {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 55px;
+}
 
 .round {
     display: flex;
@@ -299,9 +307,6 @@ header {
     margin: 10px 300px;
 }
 
-.section2 {
-    margin-left: 80px;
-}
 
 .part1 {
     margin-top: -20px;
@@ -699,7 +704,8 @@ header {
     flex-direction: column;
     align-items: center;
     height: 400px;
-    background: var(--Linear-gradient, linear-gradient(180deg, #1E3448 99.99%, rgba(30, 52, 72, 0.00) 100%));
+    background-image: url(asset/Desktop-11.png);
+    /* background: var(--Linear-gradient, linear-gradient(180deg, #1E3448 99.99%, rgba(30, 52, 72, 0.00) 100%)); */
 
     >div {
         padding: 42px;
@@ -847,8 +853,13 @@ header {
     content: "\2796";
 }
 
+
+.accord>button {
+    border-bottom: 1px solid #1E3448;
+}
+
 .section6 {
-    background: linear-gradient(180deg, #1E3448 99.99%, rgba(30, 52, 72, 0.00) 100%);
+    background-image: url(asset/Desktop-12.png);
     padding: 90px 317px 80px 317px;
     margin-top: 40px;
 
@@ -896,13 +907,11 @@ footer {
     >.sec1 {
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
 
     }
 
     >.sec1>.l1 {
         display: flex;
-        /* border: 1px solid #005AE2; */
         align-items: center;
         gap: 8px;
     }
@@ -915,8 +924,6 @@ footer {
 
     >.sec1>.l2>a {
         color: #141414;
-        /* width: 20px; */
-        /* height: 20px; */
         font-size: 24px;
     }
 
@@ -995,8 +1002,6 @@ footer {
         margin-top: 81px;
     }
 
-
-
     >.sec5>div>h1 {
         color: var(--Neutral-900, #071827);
         font-family: Gilroy-Bold;
@@ -1016,8 +1021,6 @@ footer {
         font-weight: 400;
         line-height: 24px;
     }
-
-
 }
 
 .btmftr {
@@ -1063,13 +1066,740 @@ footer {
 }
 
 
-@media(max-width:767px) {
+.mobile-display {
+    display: none;
+}
 
-    .switch {
-        display: block;
+.top1 {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 15px;
+
+    .M-logo {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .M-logo>h2 {
+        color: var(--Primary-300---base, #0065FE);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 32px;
+    }
+
+
+    .m-na2>nav>ol {
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+        gap: 8px;
+        color: var(--Primary-300---base, #0065FE);
+        font-family: Gilroy-SemiBold;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: normal;
+    }
+
+    .m-na2>nav>ol>li>button {
+        display: flex;
+        width: 130px;
+        height: 40px;
+        padding: 12px 24px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 100px;
+        background: var(--Primary-300---base, #0065FE);
+        color: white;
+        border: none;
+    }
+}
+
+
+.top2 {
+    margin-top: 20px;
+
+    >.na1>.na11>ul {
+        display: flex;
+        list-style-type: none;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+    }
+
+    >.na1>.na11>ul>li:first-child {
+        color: var(--Primary-300---base, #0065FE);
+        font-family: Gilroy-Medium;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+}
+
+.opt {
+    /* display: none; */
+
+    >.opt1>div>h1 {
+        color: var(--Text-Color-Main-text, #141414);
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 30px;
+        margin-top: 20px;
+    }
+
+    >.opt1>.m-under-mark {
         display: flex;
         justify-content: center;
         align-items: center;
+        /* margin-left: 5px; */
+        margin-top: -6px;
+        /* border: 1px solid red; */
+    }
+
+    >.opt1>p {
+        margin-inline: 15px;
+        margin-top: 20px;
+        color: var(--Text-Color-Main-text, #141414);
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
+    }
+
+    .opt1>.m-enter {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
+    .opt1>.m-enter>button {
+        display: flex;
+        width: 142px;
+        height: 44px;
+        padding: 12px 24px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border: none;
+        color: white;
+        border-radius: 100px;
+        background: var(--Primary-300---base, #0065FE);
+    }
+
+    .opt1>.m-enter>a>h1 {
+        width: 142px;
+        height: 44px;
+        color: var(--Primary-300---base, #0065FE);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: normal;
+        display: flex;
+        align-items: center;
+    }
+
+    .opt1>.m-enter>a {
+        text-decoration: none;
+
+    }
+
+
+    .m-testing {
+        border-radius: 24px;
+        border: 0.5px solid var(--Primary-400, #005AE2);
+        backdrop-filter: blur(106px);
+        background: linear-gradient(89deg, rgba(226, 233, 240, 0.50) 30.68%, rgba(220, 228, 235, 0.30) 40.01%, rgba(226, 233, 240, 0.00) 50.0%);
+        display: inline-flex;
+        flex-direction: column;
+        gap: 16px;
+        width: 400px;
+        margin-inline: 12px;
+        margin-block-start: 20px;
+
+        >.img-logo>div img {
+            display: inline;
+            margin: -6px;
+        }
+
+        >.img-logo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+
+        }
+
+        >.img-logo>.middle {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 0px;
+            stroke-width: 2px;
+            stroke: var(--Primary-400, #005AE2);
+        }
+
+        >div>p {
+            /* width: 562px; */
+            height: auto;
+            text-align: center;
+            align-self: stretch;
+            padding-inline: 20px;
+
+            color: var(--Text-Color-Main-text, #141414);
+            text-align: center;
+            font-family: Gilroy-Medium;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 24px;
+        }
+
+    }
+
+    >.M-El-Re {
+        margin-top: 15px;
+        margin-left: 15px;
+    }
+
+    >.m-part1 {
+        margin-top: 20px;
+        background: #F9FBFD;
+    }
+
+    >.m-part1>.sub-part1 {
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Gilroy-Bold;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 50px;
+    }
+
+    >.m-part1>.sub-part1>.t-b {
+        display: flex;
+        gap: 15px;
+    }
+
+    >.m-part1>.sub-part1>.t-b>.pos {
+        color: var(--Primary-400, #005AE2);
+        font-family: Gilroy-Bold;
+        font-size: 45px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 50px;
+    }
+
+
+    >.m-part1>.sub-part2 {
+        margin-top: 40px;
+        display: flex;
+        margin-left: 20px;
+        margin-right: 20px;
+        justify-content: space-between;
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Gilroy-Bold;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px;
+    }
+
+    >.m-part1>.sub-part3 {
+        margin-top: 40px;
+        display: flex;
+        margin-left: 20px;
+        margin-right: 65px;
+        justify-content: space-between;
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Gilroy-Bold;
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px;
+    }
+
+    >.m-part1>.sub-part2>div>h4 {
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Gilroy-Medium;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 100;
+        line-height: 30px;
+    }
+
+    >.m-part1>.sub-part3>div>h4 {
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Gilroy-Medium;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 100;
+        line-height: 30px;
+    }
+
+
+    >.m-sub1>div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        padding-block-start: 20px;
+        color: var(--Text-Color-Main-text, #141414);
+        /* font-family: Gilroy-Bold; */
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 35px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 32px;
+    }
+
+    >.m-sub1>div>div>span {
+        color: var(--Primary-400, #005AE2);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 35px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 32px;
+    }
+
+    >.m-sub1>p {
+        padding-block-start: 20px;
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Gilroy-Medium;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
+        margin-inline: 50px;
+    }
+
+    >.m-cot {
+        margin-top: 30px;
+    }
+
+    >.m-cot>.m-sub2>div {
+        padding-top: 20px;
+        margin-top: 5px;
+        margin-inline: 42px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    >.m-cot>.m-sub2>div>.fa-solid {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 25px;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        color: #005AE2;
+
+        background: rgba(50, 132, 255, 0.13);
+    }
+}
+
+.perfect {
+
+    margin-top: 30px;
+
+    >.m-t-sec1>div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 12px;
+        color: var(--Text-Color-Main-text, #141414);
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: bold;
+    }
+
+    >.m-t-sec1>div>div>span {
+        color: var(--Primary-400, #005AE2);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: bold;
+    }
+
+    >.m-t-sec1>p {
+        margin-inline: 10px;
+        margin-block-start: 5px;
+        width: 400px;
+        color: var(--Text-Color-Main-text, #141414);
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+    }
+
+    >.m-t-sec2>.rows {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    >.m-t-sec2>.rows>.row1-3 {
+        margin-block: 25px;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        padding-inline-start: 25px;
+        padding-block: 30px;
+        border-radius: 12px;
+        background: #FFF;
+        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.05), 0px 15px 35px 0px rgba(43, 64, 78, 0.10);
+    }
+
+    >.m-t-sec2>div>.row1-3>h3 {
+        color: var(--Text-Color-Main-text, #141414);
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px;
+    }
+
+    >.m-t-sec2>div>.row1-3>h1 {
+        color: var(--Text-Color-Main-text, #141414);
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 48px;
+    }
+
+    >.m-t-sec2>div>.row1-3>Ol>div {
+        display: flex;
+        gap: 9px;
+        list-style-type: none;
+        margin-top: 25px;
+    }
+
+    >.m-t-sec2>div>.row2>Ol>div>img {
+        filter: grayscale(100%) brightness(0) invert(100%);
+    }
+
+    >.m-t-sec2>.rows>.row2 {
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        padding-inline-start: 25px;
+        color: white;
+        padding-block: 30px;
+        border-radius: 12px;
+        background: var(--Linear-gradient, linear-gradient(180deg, #1E3448 99.99%, rgba(30, 52, 72, 0.00) 100%));
+        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.05), 0px 15px 35px 0px rgba(43, 64, 78, 0.10);
+    }
+
+    >.m-t-sec2>div>.row2>h3 {
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px;
+    }
+
+    >.m-t-sec2>div>.row2>h1 {
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 48px;
+    }
+
+    >.m-t-sec2>div>.row2>Ol>div {
+        display: flex;
+        gap: 9px;
+        list-style-type: none;
+        margin-top: 25px;
+    }
+
+}
+
+
+.m-btn {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    >.btn1 {
+        display: flex;
+        width: 180px;
+        padding: 10px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 100px;
+        background-color: white;
+        color: #0065FE;
+        border: 1px solid var(--Primary-300---base, #0065FE);
+    }
+
+    >.btn2 {
+        display: flex;
+        width: 180px;
+        padding: 10px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 100px;
+        background-color: #0065FE;
+        color: white;
+        border: none;
+    }
+}
+
+.m-frm-bg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 450px;
+    margin-block: 25px;
+    background-image: url(asset/Desktop-11.png);
+}
+
+.m-frm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    border-radius: 12px;
+    background: #FFF;
+    padding: 20px 15px;
+
+    >form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    >form>div>input {
+        padding: 8px 12px;
+        outline: none;
+        border-radius: 12px;
+        border: 1px solid var(--Primary-100, #005AE2);
+    }
+
+    >form>input {
+        padding: 8px 12px;
+        outline: none;
+        border-radius: 12px;
+        border: 1px solid var(--Primary-100, #005AE2);
+
+    }
+
+    input::placeholder {
+        color: #005AE2;
+    }
+
+
+    >button {
+        display: flex;
+        width: 350px;
+        padding: 12px 24px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        border: none;
+        border-radius: 100px;
+        background: var(--Primary-400, #005AE2);
+    }
+
+    >p {
+        color: var(--Primary-200, #4991FF);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        width: 340px;
+        text-align: center;
+    }
+
+    >p>a {
+        color: var(--Primary-100, #3284FF);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 20px;
+        text-decoration: none;
+    }
+}
+
+.m-section5 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    >.accord {
+        width: 425px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    >.accord>button {
+        border-bottom: 1px solid #1E3448;
+    }
+}
+
+.m-section6 {
+    background-image: url(asset/Desktop-12.png);
+    padding: 50px 190px 60px 190px;
+    margin-top: -30px;
+
+    >div {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    >div>h1 {
+        width: 300px;
+        text-align: center;
+        color: #FFF;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    >div>button {
+        display: flex;
+        width: 200px;
+        height: 48px;
+        padding: 12px 24px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 100px;
+        background: var(--Primary-400, #005AE2);
+        border: none;
+        color: white;
+        font-size: 16px;
+    }
+}
+
+.m-footer {
+    margin-top: 20px;
+
+    >.foot1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    >.foot1>.l1 {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: var(--Text-Color-Main-text, #141414);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 32px;
+    }
+
+    >.foot1>.l2 {
+        display: flex;
+        gap: 25px;
+        font-size: 30px;
+    }
+
+    >.foot1>.l2>a {
+        color: black;
+
+    }
+
+    >div {
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+
+    >div>h1 {
+        color: var(--Neutral-900, #071827);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 25px;
+        font-style: normal;
+        font-weight: bold;
+        line-height: 24px;
+    }
+
+    >div>ul>a {
+        color: var(--Neutral-800, #112232);
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        /* 150% */
+        text-decoration: none;
+        list-style-type: none;
+
+    }
+
+    >.m-btmftr {
+        position: absolute;
+        right: 0;
+        padding-bottom: 15px;
+    }
+
+    >.m-btmftr>a {
+        color: var(--Neutral-800, #112232);
+        font-family: Gilroy-Medium;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        text-decoration: none;
+    }
+}
+
+
+@media(max-width:767px) {
+
+    .mobile-display {
+        display: block;
     }
 
     main {
